--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "tsnd --respawn src/server.ts"
+    "start": "tsnd --respawn src/server.ts",
+    "build": "tsc",
+    "test": "jest"
   },
   "dependencies": {
+    "@types/express": "^5.0.0",
     "express": "^4.18.2",
     "knex": "^2.5.1",
     "mysql2": "^3.11.3",
-    "nodemon": "^3.1.7"
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.2"
+    "@types/jest": "^29.5.13",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "ts-node-dev": "^2.0.0"
   }
 }
